--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <title>Affixiated Roots</title>
+  <meta name="description" content="Musical instruments mixing tradition with innovation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
