--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <nav>
+    <a href="/">Home</a>
+    <a href="/ebass">Electric Bass</a>
+  </nav>
   <h1>Affixiated Roots</h1>
   <div>Coming soon</div>
 </body>
