--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <title>Affixiated Roots</title>
   <meta name="description" content="Musical instruments mixing tradition with innovation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="affixiatedroots.com/">
 </head>
 <body>
   <nav>
-    <a href="">Home</a>
-    <a href="ebass">Electric Bass</a>
+    <a href="#">Home</a>
+    <a href="ebass.html">Electric Bass</a>
   </nav>
   <h1>Affixiated Roots</h1>
   <div>Coming soon</div>
