--- a/ebass.html
+++ b/ebass.html
@@ -2,12 +2,11 @@
 <head>
   <title>Electric Bass</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="affixiatedroots.com/">
 </head>
 <body>
   <nav>
-    <a href="">Home</a>
-    <a href="ebass">Electric Bass</a>
+    <a href="https://affixiatedroots.com/">Home</a>
+    <a href="#">Electric Bass</a>
   </nav>
   <h1>Electric Bass</h1>
 </body>
