--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Affixiated Roots</title>
   <meta name="description" content="Musical instruments mixing tradition with innovation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
