--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="#">Home</a>
-    <a href="ebass.html">Electric Bass</a>
-  </nav>
-  <h1>Affixiated Roots</h1>
-  <div>Coming soon</div>
+  <header>
+    <nav>
+      <a href="#">home</a>
+      <a href="ebass.html">electric bass</a>
+      <a href="mandolin.html">mandolin</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Affixiated Roots</h1>
+    <p>Coming soon</p>
+  </main>
 </body>
 </html>
