--- a/ebass.html
+++ b/ebass.html
@@ -1,14 +1,22 @@
 <html>
 <head>
   <title>Electric Bass</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <nav>
-    <a href="https://affixiatedroots.com/">Home</a>
-    <a href="#">Electric Bass</a>
-  </nav>
-  <h1>Electric Bass</h1>
+  <header>
+    <nav>
+      <a href="index.html">home</a>
+      <a href="#">electric bass</a>
+      <a href="mandolin.html">mandolin</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Electric Bass</h1>
+    <p></p>
+  </main>
 </body>
 </html>
