--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 </head>
 <body>
   <header>
+    <div id="logo">
+      <svg width="100%" height="100%" viewBox="0 0 720 720" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill:none;fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
+        <circle cx="360" cy="360" r="300" style="stroke-width:50px;" />
+        <path d="M555,375L525,345" style="stroke-width:60px;" />
+        <path d="M465,435L435,465" style="stroke-width:60px;" />
+        <path d="M345,195L375,165" style="stroke-width:60px;" />
+        <path d="M255,285L285,255" style="stroke-width:60px;" />
+        <path d="M165,375L195,345" style="stroke-width:60px;" />
+        <path d="M255,465L285,435" style="stroke-width:60px;" />
+        <path d="M375,345L345,375" style="stroke-width:60px;" />
+        <path d="M465,255L435,285" style="stroke-width:60px;" />
+        <path d="M345,525L375,555" style="stroke-width:60px;" />
+      </svg>
+    </div>
     <nav>
-      <a href="#">home</a>
       <a href="ebass.html">electric bass</a>
       <a href="mandolin.html">mandolin</a>
     </nav>
